--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
+#Configuración del datasource con H emulator
+spring.h2.console.enabled=true
+spring.h2.console.path=/worker_db
+
+# H2 database
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=root
+spring.datasource.password=root
+
+# MySQL database
+#spring.datasource.url=jdbc:mysql://localhost:8889/worker_db
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.username=root
+#spring.datasource.password=root
+
+#Configuraciones JPA
+spring.jpa.open-in-view=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+
+#Puerto del servidor Tomcat
+server.port=8888
 
